Could not insert metadata for item ... : Not a ISO 8601 date string. Allowed form is [-]CCYY-MM-DDThh:mm:ss[Z|(+|-)hh:mm]
(tracker-extract:14507): Tracker-WARNING **: 07:17:10.282: Could not insert metadata for item "file://[redacted].avi": Not a ISO 8601 date string. Allowed form is [-]CCYY-MM-DDThh:mm:ss[Z|(+|-)hh:mm]
(tracker-extract:14507): Tracker-WARNING **: 07:17:10.282: If the error above is recurrent for the same item/ID, consider running "tracker-extract" in the terminal with the TRACKER_VERBOSITY=3 environment variable, and filing a bug with the additional information
(tracker-extract:14507): Tracker-DEBUG: 07:17:10.282: Sparql was:
DELETE {
GRAPH <urn:uuid:472ed0cc-40ff-4e37-9c0c-062d78656540> {
<urn:uuid:a73f1520-3b34-784e-57db-93ef0c45512b>
nfo:hasHash ?nfo_hasHash ;
nfo:frameRate ?nfo_frameRate ;
nie:contentCreated ?nie_contentCreated ;
nfo:width ?nfo_width ;
nfo:duration ?nfo_duration ;
nfo:aspectRatio ?nfo_aspectRatio ;
nfo:height ?nfo_height }
}
WHERE {
GRAPH <urn:uuid:472ed0cc-40ff-4e37-9c0c-062d78656540> {
<urn:uuid:a73f1520-3b34-784e-57db-93ef0c45512b>
nfo:hasHash ?nfo_hasHash ;
nfo:frameRate ?nfo_frameRate ;
nie:contentCreated ?nie_contentCreated ;
nfo:width ?nfo_width ;
nfo:duration ?nfo_duration ;
nfo:aspectRatio ?nfo_aspectRatio ;
nfo:height ?nfo_height }
}
INSERT {
GRAPH <urn:uuid:472ed0cc-40ff-4e37-9c0c-062d78656540> {
_:6 a nfo:FileHash ;
nfo:hashValue "1f956698f5c474ae" ;
nfo:hashAlgorithm "gibest" .
<urn:uuid:a73f1520-3b34-784e-57db-93ef0c45512b> a nmm:Video ;
nfo:hasHash _:6 ;
nfo:frameRate 15 ;
nie:contentCreated "2001-05-15T00:00:00-4:00" ;
nie:dataSource <http://www.tracker-project.org/ontologies/tracker#extractor-data-source> ;
nfo:width 320 ;
nfo:duration 30 ;
nfo:aspectRatio 1 ;
nfo:height 240 .
}
}